kubeConfig/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app-container
          image: nxtappservices:latest  
          ports:
            - containerPort: 3000 
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
