kubeConfig/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  labels:
    app: my-app
spec:
  type: LoadBalancer 
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80  # External port
      targetPort: 3000  # Port on the container
